<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/habit_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.SignInFragment">

    <TextView
        android:id="@+id/tv_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="@color/tv_sign_in"
        app:layout_constraintBottom_toTopOf="@+id/til_first_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_first_name"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@id/til_last_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_in">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_first_name"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name_hint"
            android:inputType="textCapWords"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_last_name"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@id/til_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_first_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_last_name"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name_hint"
            android:inputType="textCapWords"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@id/btn_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_last_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textCapWords"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_btn"
        app:layout_constraintBottom_toTopOf="@+id/ll_already_have"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_email"/>

    <LinearLayout
        android:id="@+id/ll_already_have"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_in"
        app:layout_constraintStart_toStartOf="@id/btn_sign_in"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tv_already_have"
            android:text="@string/already_have"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/btn_text_log_in"
            android:textColor="@color/button_log_in"
            android:text="@string/already_log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>